--- a/styles/style.css
+++ b/styles/style.css
@@ -303,6 +303,12 @@ h3 {
   margin-bottom: 20px;
 }
 
+ul,
+li {
+  padding-left: 0;
+  list-style: none;
+}
+
 a {
   color: #fff;
   font-weight: bold;
@@ -390,6 +396,13 @@ footer {
 footer p {
   font-size: 0.8rem;
   margin: 0;
+}
+
+footer a:hover,
+footer a:focus {
+  background: #fff;
+  color: #da3052;
+  text-decoration: none;
 }
 
 .flex-container {
